--- a/SBScavengerHunt/Base.lproj/Main.storyboard
+++ b/SBScavengerHunt/Base.lproj/Main.storyboard
@@ -30,6 +30,9 @@
                                 <state key="normal" title="Find a hunt">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="onFind:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="YEe-Kw-Z8J"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
